project one stage one

--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
       name="keywords"
       content="This is a coffee shop website for the Triple Ten Coding Bootcamp"
     />
+    <link href="./style.css" rel="stylesheet" />
+    <link href="./pages/index.css" rel="index.css" />
+    <link href="vendor/normalize.css" rel="normalize" />
+    <link href="./favicon.ico" rel="icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Coffee Shop</title>
   </head>
-  <body>
-    <h1>Hello World!</h1>
-  </body>
+  <div class="page">
+    <header class="header_block">
+      <h1>Hello World!</h1>
+    </header>
+    <body>
+      <section class="recipes"></section>
+      <section class="reservation"></section>
+      <section class="menu"></section>
+      <section class="about"></section>
+    </body>
+    <footer></footer>
+  </div>
 </html>
